# hdw-lua-scripts

./: .gitignore  ADDED_ItemEffect.lua  ADDED_ItemInfo.txt  CharacterInfo.txt  ItemEffect-backup.lua  ItemEffect.lua  ItemInfo-backup.txt  ItemInfo-old.txt  ItemInfo.txt  Lv1Stone_AsLv9.lua  MissionScript01-back.lua  append_iteminfo_gbk.py  apply_iteminfo_rules.py  build_exe.bat  fix_encoding.py  fix_encoding_final.py  fix_iteminfo_encoding.py  fix_lua_encoding.py  fix_mojibake.py  item_browser.html  patch_itemeffect_lua.py  serve_item_browser.py  start_item_browser.bat  variable-new.lua
.cursor/rules/: a.mdc
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
