[package]
name = "item-browser"
version = "0.1.0"
edition = "2021"

[lib]
name = "item_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
rfd = "0.15"
